<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indv_prj_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sbh.sawan@gmail.com">sawan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>launch</depend>
  <depend>launch_ros</depend> -->
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_locaization</depend>

  <depend>interfaces_indv_prj_pkg</depend>

  <!-- <exec_depend>ros2launch</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
